--- a/Parte1/postit.css
+++ b/Parte1/postit.css
@@ -11,16 +11,22 @@ main {
   font-family: "Indie Flower", cursive;
 }
 
+.box,
+h2,
+p {
+  transition: all 0.5s;
+}
+
 .box {
-  background: linear-gradient(180deg, #cafccb, #7c837c);
-  box-shadow: 4px 4px 10px black;
-  width: 21%;
-  height: 35%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  rotate: z 5deg;
+  width: 21%;
+  height: 35%;
+  background: linear-gradient(180deg, #cafccb, #7c837c);
+  box-shadow: 4px 4px 10px black;
+  rotate: z 365deg;
 }
 
 .box:nth-of-type(1),
@@ -49,4 +55,19 @@ h2 {
 
 p {
   font-size: 2em;
+}
+
+.box:hover {
+  height: 40%;
+  width: 30%;
+  rotate: z 360deg;
+  box-shadow: 15px 15px 20px black;
+}
+
+.box:hover h2 {
+  font-size: 5em;
+}
+
+.box:hover p {
+  font-size: 3em;
 }
