--- a/Parte1/postit.css
+++ b/Parte1/postit.css
@@ -18,20 +18,20 @@ main {
   align-items: center;
   width: 21%;
   height: 20%;
-  background: linear-gradient(180deg, #cafccb, #7c837c);
   box-shadow: 4px 4px 10px black;
+}
+
+.green {
+  background: linear-gradient(180deg, #cafccb, #7c837c);
   rotate: z 365deg;
 }
 
-.box:nth-of-type(1),
-.box:nth-of-type(5),
-.box:nth-of-type(7) {
+.yellow {
   background: linear-gradient(180deg, #f5f5c3, #7b7b70);
   rotate: z 355deg;
 }
 
-.box:nth-of-type(3),
-.box:nth-of-type(6) {
+.violet {
   background: linear-gradient(180deg, #c8c8f6, #6e6e89);
   rotate: z 350deg;
 }
